fixed the horizontal scroll bar bug

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,13 @@
+.myNavDefaults {
+  padding: 0.3em;
+  margin: 0.2em;
+  font-size: 1.5em;
+}
+.myHeaderDefaults {
+  font-size: 2em;
+  padding: 0.3em;
+  margin: 0.3em;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -204,40 +214,22 @@ footer {
   .home .space-images {
     flex-direction: column;
     width: 100%;
-    flex-shrink: 1;
   }
 }
-.home img.space-img-1 {
+.home .space-images img {
   width: 28%;
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
 }
 @media (max-width:500px) {
-  .home img.space-img-1 {
-    width: 100%;
-    flex-shrink: 1;
+  .home .space-images img:nth-child(1) {
+    width: 90%;
   }
 }
-.home img.space-img-2 {
-  width: 28%;
-  margin: 20px 2.5%;
-  border-radius: 20px;
-  height: 100%;
-}
 @media (max-width:500px) {
-  .home img.space-img-2 {
-    display: none;
-  }
-}
-.home img.space-img-3 {
-  width: 28%;
-  margin: 20px 2.5%;
-  border-radius: 20px;
-  height: 100%;
-}
-@media (max-width:500px) {
-  .home img.space-img-3 {
+  .home .space-images img:nth-child(2),
+  .home .space-images img:last-child {
     display: none;
   }
 }
@@ -269,7 +261,6 @@ footer {
 @media (max-width:500px) {
   .home .walk .walk-text {
     width: 100%;
-    flex-shrink: 1;
   }
 }
 .home .walk .walk-text h3 {
@@ -282,24 +273,26 @@ footer {
   padding: 0.6em;
   margin: 0.4em;
   background-color: #22283A;
-  color: white;
+  color: #fff;
   border-radius: 0.5em;
   width: 25%;
   text-align: center;
+  cursor: pointer;
 }
-@media (max-width) {
+.home .walk .walk-text .btn:hover {
+  background-color: blue;
+  color: yellow;
+}
+@media (max-width:500px) {
   .home .walk .walk-text .btn {
     padding: 1em;
     margin: 1em;
     background-color: #22283A;
-    color: white;
+    color: #fff;
     border-radius: 0.5em;
     width: 100%;
     text-align: center;
-  }
-  .home .walk .walk-text .btn:hover {
-    background-color: blue;
-    color: yellow;
+    cursor: pointer;
   }
 }
 .home .walk .walk-img {
@@ -309,7 +302,6 @@ footer {
 @media (max-width:500px) {
   .home .walk .walk-img {
     width: 100%;
-    flex-shrink: 1;
   }
 }
 .home .walk .walk-img img {
@@ -317,15 +309,24 @@ footer {
   height: auto;
   border-radius: 10px;
 }
+@media (max-width:500px) {
+  .home .walk .walk-img img {
+    width: 100%;
+  }
+}
 .header-img-wrapper img {
   border-radius: 0.5em;
   padding: 0.2em;
   margin: 0.3em;
 }
+@media (max-width: 830px) {
+  .header-img-wrapper img {
+    width: 90%;
+  }
+}
 @media (max-width:500px) {
   .header-img-wrapper img {
-    width: 100%;
-    flex-shrink: 1;
+    width: 90%;
   }
 }
 h1,
