--- a/less/home-page.less
+++ b/less/home-page.less
@@ -16,62 +16,47 @@
   .space-images {
     display: flex;
     flex-wrap: wrap;
-    width: 100%;  
+    width: 100%;
+      
     @media @phone{
       flex-direction: column;
       width:100%;
-      flex-shrink: 1;
   
     } 
-  }   
-    img.space-img-1 {
-     
-       width: 28%;
-       margin: 20px 2.5%;
-       border-radius: 20px;
-       height: 100%;
-      @media @phone {
-        width:100%;
-        flex-shrink: 1;
-        
-      }
-    }
 
-    img.space-img-2{
-     
+    & img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
-     @media @phone {
-       display: none;
-       
-     }
-   }
+      
+      &:nth-child(1) {
+        @media @phone {
+        width:90%;
 
-   img.space-img-3 {
-     
-    width: 28%;
-    margin: 20px 2.5%;
-    border-radius: 20px;
-    height: 100%;
-   @media @phone {
-     display:none;
-     
-   }
- }
-    
+      }
+    }
+      &:nth-child(2), 
+      &:last-child {
+        @media @phone {
+          display: none;
+          
+        }
+        
+      }
+    }
+  }  
 
   .visit-planets {
     padding: 15px;
 
-    h3 {
-      margin-top: 11px;
-    }
+      h3 {
+        margin-top: 11px;
+      }
 
-    p {
-      margin-top: 13px;
-    }
+      p {
+        margin-top: 13px;
+      }
   }
 
   .walk {
@@ -88,10 +73,10 @@
     }
 
     .walk-text {
-      width: 50%; 
-      @media @phone{
+      width: 50%;
+
+      @media @phone {
         width:100%;
-        flex-shrink:1;
       }
       
 
@@ -103,22 +88,17 @@
         margin-bottom: 26px;
       }
       .btn {
-        .myButtonDefaults(0.6em,0.4em,25%);
-        @media (max-width) {
-          .myButtonDefaults(1em,1em,100%);   
-        
-        &:hover{
-          background-color: blue;
-          color: yellow;
-
-         
-          }
+        .myButtonDefaults(0.6em,0.4em,25%);   
+          &:hover{
+            background-color: blue;
+            color: yellow;
+            }
+            @media @phone {
+              .myButtonDefaults(1em,1em,100%);
         }
       }
        
     }
-
-    
 
     .walk-img {
       width: 46%;
@@ -126,27 +106,37 @@
 
       @media @phone{
         width:100%;
-        flex-shrink: 1;
       }
       
       img {
         width: 100%;
         height: auto;
         border-radius: 10px;
+
+        @media @phone{
+          width:100%;
+        }
       }
     }
   }
 }// home
 .header-img-wrapper{
   
+  
   img{
       border-radius: 0.5em;
       padding:0.2em;
       margin:0.3em;
-      @media @phone{
-        width:100%;
-        flex-shrink: 1;
+      // margin-top: 1em;
+
+      @media (max-width:830px){
+        width:90%;
       }
+
+      @media @phone{
+        width:90%;
+      }
+
   }
   
 }
